@@ -1249,7 +1249,7 @@ _publican()
 				return 0;
 				;;
 			--formats)
-				COMPREPLY=( \$( compgen -W "eclipse epub html html-single html-desktop man pdf txt xml" -- \$cur ) )
+				COMPREPLY=( \$( compgen -W "eclipse epub drupal-book html html-single html-desktop man pdf txt xml" -- \$cur ) )
 				return 0;
 				;;
 			--type)
