@@ -68,7 +68,7 @@
  </style>
       </head>
       <body>
-        <h1>Table of Content</h1>
+        <h1>Table of Contents</h1>
         <ul><xsl:apply-templates select="outline:item/outline:item"/></ul>
       </body>
     </html>
