@@ -21,6 +21,8 @@
   - Remove DocBook TOCs from PDF. BZ #874795
   - Use better TOC for PDF. BZ #879388
   - Fix directory ownership in SPEC file. BZ #894522
+  - Fix TOC anchor resloution. BZ #879388
+
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
